# daimond

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
dev/: fsa_disk_check.mjs  harness.mjs  keeper.mjs  matrix.mjs  mockllm.mjs  probe.mjs  probe_facetdlg.mjs  probe_focusdlg.mjs  probe_turns.mjs  real_smoke.mjs  run_all.sh  serve.mjs  session.mjs  setup-webkit-libs.sh  shot_adminrail.mjs  shot_agentpane.mjs  shot_artefacts.mjs  shot_guide.mjs  shot_mobile.mjs  shot_release.mjs  shot_typescale.mjs  shot_workspace.mjs  shots_matrix.mjs  smoke.mjs  stamp-build.mjs  verify_accounts.mjs  verify_admin.mjs  verify_agents.mjs  verify_artefacts.mjs  verify_autoreload.mjs  verify_backup.mjs  verify_cloud.mjs  verify_compose.mjs  verify_delivery.mjs  verify_diamondroot.mjs  verify_diamondroot_recent.mjs  verify_durability.mjs  verify_ext.mjs  verify_facetroot.mjs  verify_folddelta.mjs  (+43 more)
dev/results/: codefix.json  conflict.json  foci.json  multiagent.json
examples/: agent_smoke.rs
ext/: README.md  announce.js  background.js  content.js  grant.html  grant.js  manifest.json  popup.html  popup.js
src/: agent.rs  diamond_link.rs  diamond_meta.rs  executor.rs  facet_link.rs  facet_meta.rs  focus_meta.rs  handler.rs  lib.rs  llm.rs  protocol.rs  session.rs  skills.rs  syntax.rs  tools.rs  workspace.rs
src/wasm/: app.rs  cloud.rs  diamond.rs  entry.rs  facet.rs  focus.rs  mod.rs  opfs.rs  web.rs
verify/: README.md  check.mjs  lib.mjs  manifest.mjs  transparency.jsonl  verify.test.mjs
verify/ext/: README.md  background.js  check.js  fingerprint.js  manifest.json  popup.html  popup.js
www/: build.json  index.html  manifest.json  release.js  releases.json  verify.html
www/css/: app.css  autoreload.css  files.css  guide.css  mail.css  mobile.css  models.css  passkey.css  release.css  render.css  responsive.css  spend.css  tools.css  updater.css  variables.css  workspace.css
www/guide/: accounts.html  chats-and-diamonds.html  chats-and-facets.html  chats-and-foci.html  email-web-files.html  index.html  interface.html  models.html  spending.html  sync.html
www/js/: accounts.js  autoreload.js  chunks.js  cloud.js  daimond.js  gateway.js  governor.js  identity.js  journal.js  ledger.js  mail.js  mobile.js  models.js  pairing.js  passkey.js  pricing.js  release.js  render.js  spend.js  sync.js  tools.js  typst.js  updater.js  verify.js  web.js  wordlist.js  workspace.js
