[package]
name = "oxedyne_daimond"
version = "0.1.0"
authors = ["Jason Hoogland <jason@oxedyne.io>"]
edition = "2021"
license = "LicenseRef-Proprietary"
description = "Daimond — browser-first agentic workspace built on the Hematite (fe2o3) library."
repository = "https://github.com/oxedyne-io/red"

[lib]
path = "src/lib.rs"
# `cdylib` lets wasm-pack emit a browser wasm module; `rlib` keeps the
# native consumers (Steel, the agent smoke example) linking as before.
crate-type = ["cdylib", "rlib"]

# Portable dependencies — build on both native and wasm32.  These are
# pulled in by the target-agnostic modules (protocol, session, syntax,
# agent, tools, skills, and the transport-neutral half of llm).
[dependencies]
oxedyne_fe2o3_core			= { path = "../../../../rust/fe2o3/fe2o3_core" }
oxedyne_fe2o3_jdat 			= { path = "../../../../rust/fe2o3/fe2o3_jdat" }
oxedyne_fe2o3_iop_hash			= { path = "../../../../rust/fe2o3/fe2o3_iop_hash" }
oxedyne_fe2o3_iop_db			= { path = "../../../../rust/fe2o3/fe2o3_iop_db" }
oxedyne_fe2o3_iop_crypto		= { path = "../../../../rust/fe2o3/fe2o3_iop_crypto" }
oxedyne_fe2o3_syntax			= { path = "../../../../rust/fe2o3/fe2o3_syntax" }
oxedyne_fe2o3_graphics			= { path = "../../../../rust/fe2o3/fe2o3_graphics" }

# Native-only dependencies.  The Steel WebSocket handler, the O3db
# session backend, and the hand-rolled TLS transport are all native
# concerns; none of these crates target wasm32.  Target-gated so Cargo
# feature unification never touches the wasm build (F6).
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
oxedyne_fe2o3_net  			= { path = "../../../../rust/fe2o3/fe2o3_net" }
oxedyne_fe2o3_hash			= { path = "../../../../rust/fe2o3/fe2o3_hash" }
oxedyne_fe2o3_o3db_sync			= { path = "../../../../rust/fe2o3/fe2o3_o3db_sync" }
oxedyne_fe2o3_stds			= { path = "../../../../rust/fe2o3/fe2o3_stds" }
oxedyne_fe2o3_text			= { path = "../../../../rust/fe2o3/fe2o3_text" }

tokio = { version = "1.35", features = ["full"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"

# Wasm-only dependencies.  The browser transport replaces the native
# TLS client with `fetch` + `ReadableStream` via web-sys, driven by
# wasm-bindgen-futures.  `getrandom`'s `js` backend must stay confined
# to wasm32 so it never leaks onto native (F6).
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen		= "0.2"
wasm-bindgen-futures	= "0.4"
js-sys			= "0.3"
getrandom		= { version = "0.2", features = ["js"] }
web-sys = { version = "0.3", features = [
	"AbortController",
	"AbortSignal",
	"Headers",
	"ReadableStream",
	"ReadableStreamDefaultReader",
	"ReadableStreamReadResult",
	"Request",
	"RequestInit",
	"RequestMode",
	"Response",
	"Window",
	"WorkerGlobalScope",
	# OPFS filesystem edge (main-thread async path).
	"Navigator",
	"StorageManager",
	"FileSystemDirectoryHandle",
	"FileSystemFileHandle",
	"FileSystemGetFileOptions",
	"FileSystemGetDirectoryOptions",
	"FileSystemRemoveOptions",
	"FileSystemWritableFileStream",
	"WritableStream",
	"Blob",
	"File",
	# Telling the page the real folder was taken away (see `opfs::notify_folder_lost`).
	"CustomEvent",
	"EventTarget",
] }

[dev-dependencies]
tokio = { version = "1.35", features = ["full", "test-util"] }
